syntax = "proto3";
package fetchai.crypto.bls12381;

import "gogoproto/gogo.proto";

option go_package = "github.com/fetchai/fetchd/crypto/keys/bls12381";

// PubKey defines a bls public key
// Key is the uncompressed form of the pubkey. The first byte depends is a 0x02
// byte if the y-coordinate is the lexicographically largest of the two
// associated with the x-coordinate. Otherwise the first byte is a 0x03. This
// prefix is followed with the x-coordinate.
message PubKey {
  option (gogoproto.goproto_stringer) = false;

  bytes key = 1;
}

// PrivKey defines a bls private key.
message PrivKey { bytes key = 1; }